sema/testdata/gcc-c99-extra/reject/spellcheck-stdbool.c
bool b;


int test_true (void)
{
  return true;

}

int test_false (void)
{
  return false;

}
